# os

./: .gitignore  Cargo.toml  Justfile  LICENSE-Apache  LICENSE-MIT  README.md  bootloader.S  linker.ld  rust-toolchain.toml
.github/workflows/: build.yml
iso/boot/grub/: grub.cfg
src/: cpu.rs  lib.rs  vga.rs
src/cpu/: cpuid.rs
src/mem/: area_frame_alloc.rs  mod.rs
src/mem/paging/: controller.rs  entries.rs  mod.rs
src/misc/: banner.rs  cstring.rs  klog.rs  mod.rs
