[package]
name = "os"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bitflags = "2.4.2"
multiboot2 = { version = "0.20.0", default-features = false }
strum = { version = "0.26.1", default-features = false }
strum_macros = "0.26.1"
